[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "camelot>=12.6.29",
    "camelot-py>=1.0.0",
    "nltk>=3.9.1",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "plotly>=6.0.1",
    "pypdf2>=3.0.1",
    "streamlit>=1.44.0",
    "flask>=2.3.0",
]
